cmake_minimum_required(VERSION 3.5)

project(MultiThread)

add_subdirectory(PC)
add_subdirectory(PCBusyWait)
add_subdirectory(CallOnce)
add_subdirectory(Concurrent)
add_subdirectory(AvoidDeadLock)
add_subdirectory(CondDeadLock)
add_subdirectory(AsyncTask)
add_subdirectory(AsyncClassFunc)
add_subdirectory(PackageTask)
add_subdirectory(PromiseFuture)